# sentiment_analysis

./: .gitattributes  .gitignore  NLP_Project.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/src/backend_app/: __init__.py  main.py  schemas.py
apps/backend/src/backend_app/api/: routes.py
apps/backend/src/backend_app/core/: config.py
apps/backend/src/backend_app/services/: analytics.py  inference.py
apps/backend/tests/: test_health.py  test_sentiment.py
apps/frontend/: .eslintrc.cjs  Dockerfile  README.md  example.py  index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: health.ts  metrics.ts  sentiment.ts
apps/frontend/src/components/: HealthCard.tsx  SentimentMetricsCard.tsx  SentimentPlayground.tsx
docs/: enterprise_plan.md
ml/: Dockerfile  README.md
ml/scripts/: train_imdb.sh  train_sarcasm.sh
scripts/: train_imdb.py  train_sarcasm.py
src/sentiment_package/: __init__.py
src/sentiment_package/imdb/: __init__.py  data.py  models.py  train.py
src/sentiment_package/sarcasm/: __init__.py  data.py  glove.py  models.py  train.py
tests/: test_imports.py  test_models.py
