[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentiment-platform"
version = "0.1.0"
description = "Modular sentiment and sarcasm training package extracted from the NLP notebook."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sentiment Analysis Team" }]
dependencies = [
    "tensorflow>=2.12",
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentiment_package"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sentiment_package",
    "scripts",
    "tests",
    "README.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs"]
