[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentiment-backend"
version = "0.1.0"
description = "FastAPI gateway for the sentiment platform."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sentiment Platform Team" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend_app"]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]
